2005-02-08  Cesar Lopez Nataren  <cnataren@novell.com>

	* expression.cs (Identifier.Emit): Handle case where we are
	assigning to a formal parameter. Fixes #72333.

2005-02-06  Cesar Lopez Nataren  <cnataren@novell.com>

	* expression.cs: (load_script_func) Load localbuilder in an
	invocation when needed, this let us have higher order functions,
	which is lovely (Fixes #71129). Update calls to load_engine to new signature. 
	* FunctionDeclaration.cs: Add LocalBuilder to TypeManager.locals
	* Statement.cs: Changed ctr to Init, so we can track correctly the
	parent hierarchy when building the ast of the program.
	* TypeManager.cs: Added field locals. Factored code for
	handling the tables. Added enums ManagedType and Operation.
	* Parser.cs: Track correctly the parent of return.
	* ast.cs (class Function): add ScriptBlock as possible parent of a
	global expression.
	* CodeGenerator.cs: change signature of load_engine. Instead of a
	AST a boolean. So we can call it with InFunction as parameter.

2005-02-05  Cesar Lopez Nataren  <cnataren@novell.com>

	* expression.cs: rework the late binding algorithm, we directly
	call an object's method if it's a static method of it. Added field
	late_bind, properties AccessField and Binding, renamed emit_access
	to emit_array_access to class Binary. Added fields params_info,
	late_bind and var_args to Class Args; also methods has_var_args,
	force_strong_type, reworked its	Emit code, we take care of methods
	which have variable number of arguments, take care of needed
	conversions and boxing when the	call has specific strong types as
	formal parameters. Added method IsPrint and property Parameters to
	class BuiltIn.
	* IdentificationTable.cs: Better implementation of jscript's
	environments semantics. Added classes Symbol and Binder.
	* SymbolTable.cs: Nuked.
	* Block.cs: Fix the semantic of semantic analysis and code
	generatipo process, we now allow forward declarations of variables
	and functions.